@@ -33,7 +33,14 @@ DEALINGS IN THE SOFTWARE.  */
 #else
 #include <stdlib.h>
 HTSLIB_EXPORT
-void hts_srand48(long seed) { srand48(seed); }
+void hts_srand48(long seed)
+{
+#ifdef HAVE_SRAND48_DETERMINISTIC
+    srand48_deterministic(seed);
+#else
+    srand48(seed);
+#endif
+}
 
 HTSLIB_EXPORT
 double hts_erand48(unsigned short xseed[3]) { return erand48(xseed); }
